--- a/index.css
+++ b/index.css
@@ -100,22 +100,29 @@ header {
   box-sizing: border-box;
 }
 .graph-view {
-  margin-top: 1rem;
+  margin: auto;
   background: var(--table-bg);
   border: 1.5px solid var(--primary-yellow);
   border-radius: 0.4em;
   padding: 1rem;
-  max-height: 70vh;
+  height: 70vh;
+  max-height: 80vh;
   width: 90vw;
-  margin-left: auto;
-  margin-right: auto;
+}
+
+.graph-view > canvas {
+  display: block;
+  margin: 0 auto;
+  height: 100%;
+  max-height: 100%;
+  width: 100%;
 }
 
 .dashboard-table table {
   width: 100%;
   min-width: var(--table-min-width);
   border-radius: var(--table-radius);
-  margin: 0 auto;
+  margin: auto auto;
   background: var(--table-bg);
   border-collapse: collapse;
   border-spacing: 0;
